force-app/main/default/objects/Shop__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Director of the Shop</description>
    <inlineHelpText>Do you want determine Director of this Shop? Select the corresponding Contact in this field</inlineHelpText>
    <label>Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shops</relationshipLabel>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>