force-app/main/default/objects/Shop__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Image which specify the shop visually</description>
    <formula>IMAGE( Image_URL__c , &quot;Shop image&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>