force-app/main/default/objects/Shop__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <description>Possible payment methods in this shop</description>
    <inlineHelpText>Want to determine which payment methods shop supports? Select all supported payment methods in this field.</inlineHelpText>
    <label>Payment Methods</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>