force-app/main/default/objects/Shop__c/fields/Premises_Area__c.field-meta.xml
<CustomField>
    <fullName>Premises_Area__c</fullName>
    <description>Area of shop premises, in square meters</description>
    <inlineHelpText>Area of shop premises, in square meters</inlineHelpText>
    <label>Premises Area (m^2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>