force-app/main/default/objects/Shop__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Shop&apos;s website URL</description>
    <inlineHelpText>Shop&apos;s website URL</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>