force-app/main/default/objects/Shop__c/validationRules/Director_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Director_required</fullName>
    <active>true</active>
    <description>Director required</description>
    <errorConditionFormula>ISNULL(Director__c)</errorConditionFormula>
    <errorMessage>Director required</errorMessage>
</ValidationRule>