force-app/main/default/objects/Shop__c/validationRules/Positive_Monthly_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Monthly_Revenue</fullName>
    <active>true</active>
    <description>Monthly Revenue must be positive</description>
    <errorConditionFormula>Monthly_Revenue__c &lt;= 0</errorConditionFormula>
    <errorMessage>Monthly Revenue must be positive</errorMessage>
</ValidationRule>