force-app/main/default/objects/Shop__c/listViews/Rich_Web_Shop.listView-meta.xml
<ListView>
    <fullName>Rich_Web_Shop</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Monthly_Revenue__c</field>
        <operation>greaterOrEqual</operation>
        <value>100000</value>
    </filters>
    <label>Rich Web Shop</label>
</ListView>